# openmgmt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  sync_runtime.rs
apps/desktop/ui/: Cargo.toml  Trunk.toml  index.html  styles.css
apps/desktop/ui/src/: api.rs  app.rs  main.rs  sync.rs
apps/desktop/ui/src/app/: board.rs  chat.rs  components.rs  forms.rs  mod.rs  records.rs  schedule_modal.rs  state.rs  tags.rs  timer.rs  views.rs
apps/desktop/ui/src/app/pages/: board.rs  daily_ops.rs  dashboard.rs  local_ai.rs  mod.rs  organizations.rs  project_detail.rs  projects.rs  schedule.rs  settings.rs  sync.rs  tasks.rs  today.rs
crates/openmgmt-core/: Cargo.toml
crates/openmgmt-core/src/: ai.rs  board.rs  commands.rs  db.rs  lib.rs  local_ai.rs  models.rs  scheduling.rs  scoring.rs
crates/openmgmt-core/src/sync/: conflict_policy.rs  conflicts.rs  events.rs  mod.rs  remote.rs  settings.rs  state.rs  status.rs
crates/openmgmt-gpt-bridge/: Cargo.toml
crates/openmgmt-gpt-bridge/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/openmgmt-mcp/: Cargo.toml
crates/openmgmt-mcp/src/: main.rs  tools.rs
crates/openmgmt-protocol/: Cargo.toml
crates/openmgmt-protocol/src/: auth.rs  error.rs  lib.rs  messages.rs  sync.rs  version.rs
crates/openmgmt-server/: Cargo.toml
crates/openmgmt-server/src/: config.rs  error.rs  main.rs  routes.rs  state.rs  store.rs
crates/openmgmt-sync-client/: Cargo.toml
crates/openmgmt-sync-client/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  result.rs
docs/: AI_INTEGRATION.md  INSTALLER.md  LICENSE.md  LOCAL_AI_CHAT.md  OLLAMA.md  OPENMGMT_GPT_ACTION_TESTING.md  OPENMGMT_PROTOCOL.md  PRD.md  ROADMAP.md  SCHEDULING.md  SYNC_BACKGROUND.md  SYNC_CONFLICT_POLICY.md  SYNC_MANUAL.md  SYNC_UI.md
docs/gpt-action/: GPT_INSTRUCTIONS.md  README.md  SECURITY.md  openapi.yaml
