[workspace]
members = [
  "crates/openmgmt-core",
  "crates/openmgmt-mcp",
  "crates/openmgmt-protocol",
  "crates/openmgmt-server",
  "crates/openmgmt-sync-client",
  "apps/desktop/src-tauri",
  "apps/desktop/ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
