[package]
name = "openmgmt-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
native = ["dep:reqwest", "dep:rusqlite", "dep:thiserror", "dep:tracing", "dep:uuid"]

[dependencies]
chrono.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
