[package]
name = "openmgmt-gpt-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
chrono.workspace = true
openmgmt-core = { path = "../openmgmt-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
