[package]
name = "openmgmt-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
openmgmt-core = { path = "../openmgmt-core", default-features = false }

[dev-dependencies]
serde_json.workspace = true
