[package]
name = "openmgmt-sync-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
openmgmt-core = { path = "../openmgmt-core" }
openmgmt-protocol = { path = "../openmgmt-protocol" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true

[dev-dependencies]
axum = "0.8"
tower = "0.5"
