[package]
name = "openmgmt-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
openmgmt-core = { path = "../../../crates/openmgmt-core" }
serde.workspace = true
tauri = { version = "2.11.2", features = [] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
