[package]
name = "openmgmt-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
openmgmt-core = { path = "../../../crates/openmgmt-core" }
openmgmt-sync-client = { path = "../../../crates/openmgmt-sync-client" }
serde.workspace = true
tauri = { version = "2.11.2", features = [] }
tokio = { version = "1.48.0", features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
